# Heady-pre-production

./: .dockerignore  .env  .env.example  .env.hybrid  .env.template  .gitattributes  .gitignore  .hcautobuild.config.json  .heady_deploy_log.jsonl  .windsurfrules  ADMIN_CONNECTION_GUIDE.md  ADMIN_CONNECTION_QUICK_REF.md  ADMIN_UI.md  ADMIN_UI_CONNECTION_GUIDE.md  ADMIN_UI_GUIDE.md  ARCHITECTURE.md  Build-HeadyEcosystem.ps1  CHECKPOINT_REPORT_2026-02-04.md  CLAUDE.md  CLOUDFLARE_DOMAINS.json  CLOUDFLARE_WORKERS.md  CODEMAP_INTEGRATION_COMPLETE.md  CODE_OF_CONDUCT.md  COLAB_PROTOCOL.md  CONDUCTOR_QUICKREF.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEPLOY_READY.txt  DOCKER_MCP_QUICKSTART.md  DOCKER_MCP_README.md  DOCKER_QUICKSTART.md  Dockerfile  Dockerfile.deterministic  EMAIL_SETUP_GUIDE.md  FINAL_DEPLOYMENT_GUIDE.md  GITHUB_APP_COMPLETION_SUMMARY.md  HCAutoBuild_COMPLETION_REPORT.md  HCAutoBuild_Summary.md  (+101 more)
.GitHub/: copilot-instrucgions.md
.githooks/: pre-commit
.github/: COPILOT_SETUP.md  CUSTOM_INSTRUCTIONS.md  copilot-instructions.md  copilot-mcp-config.json  github-app-manifest.json
.heady/: branding.md  build_plan.md  hcautobuild_config.json  memory.db  registry.json
.heady-context/: codemap.json  integration_report.json  operation-log.json  project-context.json
.heady-memory/: heady-registry.json
.windsurf/: CASCADE_HEADY_INTEGRATION.md  cascade-heady-proxy.py  cascade-response-logger.py  hooks.json
HeadyAcademy/: HeadyBrain.py  HeadyBrain_optimized.py  HeadyConductor.py  HeadyConductor_fix.py  HeadyLens.py  HeadyMaster.py  HeadyMemory.py  HeadyNotifier.py  HeadyOptimizer.py  HeadyRegistry.py  Node_Registry.yaml  Setup_Vault.ps1
audit_logs/: ai_routing.jsonl  reasoning_integration.jsonl
backend/: index.js  mcp_config.json  package-lock.json  package.json  pnpm-lock.yaml
benchmarks/: benchmark-results.json  hc-benchmark-suite.js
cloudflare-worker/: builder-worker.js  proxy-router.js  router.js  wrangler.toml
config/: ready-now-profile.yaml
configs/: data-schema.yaml  (+11 more)
(+535 files in other folders)
